# scriptable-guitar-pedal

./: .gitignore  .travis.yml  CMakeLists.txt  Delay.m  Delaytest.m  LICENSE  LICENSE-JSPLUMB  LICENSE_RAPIDJSON  README.md
boot/: uEnv-alsa.txt  uEnv-direct.txt  uEnv-pru.txt  uEnv.txt
cmake/: FindArmNeonComplex.cmake  FindBoost.cmake  FindCivetWeb.cmake  FindI2C.cmake  FindLibI2C.cmake  FindLibSndFile.cmake  FindLua.cmake  FindNe10.cmake  FindPrussDrv.cmake  FindRapidJson.cmake  FindTinyALSA.cmake  FindXenomai.cmake
device-tree/: Makefile  beaglebone-black-codec-pru.dts
devicetree/: Makefile  beaglebone-black-codec-alsa.dts  beaglebone-black-codec-direct.dts  beaglebone-black-codec-pru.dts  beaglebone-black-codec.dtbo  beaglebone-black-codec.dts
devicetree/direct/: beaglebone-black-codec.dts
effect-testing/: agc.m  agcdisttest.m  agctest.m  combfilter.m  combfiltertest.m  delay.m  delaytest.m  distortion.m  distortion1.m  distortion2.m  distortiontest.m  reverb.m  reverbtest.m  tremolo.m  tremolotest.m
examples/: distortion.lua  test.lua
hardware/design-rules/: minimal.dru  recommended.dru
hardware/projects/cs4272-breakout-board/: cs4272-breakout-board.brd  cs4272-breakout-board.sch
hw/: CS4272-breakout-board.brd  CS4272-breakout-board.sch  Scriptable Guitar Pedal.brd  Scriptable Guitar Pedal.sch
include/: adder.h  alsadevice.h  alsasink.h  alsasource.h  block-effect.h  blockbuffer.h  circularbuffer.h  codec.h  constants.h  convolver.h  delayeffect.h  directformconvolver.h  distortioneffect.h  dspmath.h  effect.h  fftconvolver.h  filesink.h  filesource.h  filtereffect.h  frequencydelayline.h  gpio.h  i2c.h  i2cdevice.h  i2sdevice.h  luaeffect.h  processor.h  pru.h  prudevice.h  sample-effect.h  samplebuffer.h  sampledata.h  sinesource.h  sink.h  source.h  streamsink.h  tremoloeffect.h  webserver.h
include/arm-neon-complex/: arm_neon_complex.h
include/tinyalsa/: interval.h  mixer.h  pcm.h
include/xenomai/: xeno_config.h
pru/: Makefile  audio.p  latency.p  main.p  mcasp.hp  mcasp.p  ram.hp  ram.p
pru/examples/: latency.p  loop.p  sharedmem.p  timer.p
public/: chain.html  conv.html  delay.html  dist.html  index.html  lua.html  test.html  tremolo.html
public/assets/: styles.css
sim/algorithms/: overlapsave.m
sim/effect-testing/: combfiltertest.m  delay_visualisation.m  delaytest.m  distortion.m  distortion_visualisation.m  distortiontest.m  equalizer.m  equalizertest.m  reverb.m  reverbtest.m  tremolo.m  tremolo_visualisation.m  tremolotest.m
sim/effects/: agcdisttest.m  combfilter.m  delay_visualisation.m  delaytest.m  distortion_function.m  distortion_visualisation.m  reverb_visualisation.m  reverbtest.m  tremolo_visualisation.m
sim/samples/: audiotest.mat
src/: adder.cpp  alsadevice.cpp  alsasink.cpp  block-effect.cpp  block-effect.h  codec.cpp  convolver.cpp  delayeffect.cpp  directformconvolver.cpp  distortioneffect.cpp  dspmath.cpp  effect.h  fftconvolver.cpp  filesink.cpp  filesource.cpp  filtereffect.cpp  frequencydelayline.cpp  i2c.cpp  i2cdevice.cpp  i2sdevice.cpp  luaeffect.cpp  main.cpp  pru.cpp  prudevice.cpp  sample-effect.cpp  sample-effect.h  sampledata.cpp  sinesource.cpp  tremoloeffect.cpp  webserver.cpp
(+7 files in other folders)
