cmake_minimum_required(VERSION 3.7)
project(scriptable-guitar-pedal)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
find_package(Ne10 REQUIRED)
find_package(CivetWeb REQUIRED)
find_package(LibSndFile REQUIRED)
find_package(LibI2C REQUIRED)
find_package(Lua REQUIRED)
find_package(TinyALSA REQUIRED)
find_package(RapidJson REQUIRED)

add_compile_options(-Wall -Wextra -Wpedantic -Wno-missing-field-initializers -Wno-unused-parameter)
add_executable(scriptable-guitar-pedal src/main.cpp src/sampledata.cpp src/dspmath.cpp src/i2cdevice.cpp src/codec.cpp src/directformconvolver.cpp src/fftconvolver.cpp src/sinesource.cpp src/filesink.cpp src/filesource.cpp src/tremoloeffect.cpp src/distortioneffect.cpp src/luaeffect.cpp src/alsadevice.cpp src/filtereffect.cpp)
target_link_libraries(scriptable-guitar-pedal ${NE10_LIBRARIES} ${CIVETWEB_LIBRARIES} ${LIBSNDFILE_LIBRARIES} ${LIBI2C_LIBRARIES} ${LUA_LIBRARIES} ${TINYALSA_LIBRARIES})
include_directories("${CMAKE_SOURCE_DIR}/include" ${NE10_INCLUDE_DIRS} ${CIVETWEB_INCLUDE_DIRS} ${LIBSNDFILE_INCLUDE_DIRS} ${LIBI2C_INCLUDE_DIRS} ${LUA_INCLUDE_DIRS} ${TINYALSA_INCLUDE_DIRS} ${RAPIDJSON_INCLUDE_DIRS})
target_compile_features(scriptable-guitar-pedal PRIVATE cxx_constexpr)
target_compile_features(scriptable-guitar-pedal PUBLIC cxx_std_11)
